src/objects/HCP_Contract_MERC__c.object
<CustomObject>
    <description>Contains contract details between Lilly and event speakers. 
Created by John A Adams 10/2/2013</description>
    <fields>
        <fullName>Account_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship between HCP Contracts and Accounts
Created by John A Adams 10/9/2013</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>HCP Contracts</relationshipLabel>
        <relationshipName>HCP_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Conditions_MERC__c</fullName>
        <description>Free text to allow entry of any additional contract or Payment conditions 
Created by John A Adams 10/17/2013</description>
        <label>Additional Contract or Payment Condition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Expiration_Date_MERC__c</fullName>
        <description>Capture the expiration date of the contract. Created 11/19/2013 by KLorenti, Mavens Consulting</description>
        <label>Contract Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Request_Status_MERC__c</fullName>
        <description>Records the status of the contract.
Created by John A Adams 10/8/2013</description>
        <label>Contract Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>Contract request submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCP IP in progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCP IP received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FMV in progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FMV completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract in progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract signed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Search_MERC__c</fullName>
        <description>Used to improve Searching for Contracts from the Meeting Participant record.</description>
        <label>Contract Search</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_MERC__c</fullName>
        <description>Select speakers country to start fee calculation process
Created by John A Adams 10/4/2013</description>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description_of_Service_MERC__c</fullName>
        <description>Description of service (only if ad hoc consulting)
Created by John A Adams 10/17/2013</description>
        <inlineHelpText>Provide a description of service only if an ad hoc consulting</inlineHelpText>
        <label>Description of Service</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HCP_Obligations_MERC__c</fullName>
        <description>Records any contract specific HCP obligations
Created by John A Adams 10/17/2013</description>
        <label>HCP Obligations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Institution_MERC__c</fullName>
        <description>Pulls the Veeva Organization name in so that have ability to manually reconfirm a HCP&apos;s affiliated Institutions by asking the question within the Payment Contract.
Created by John A Adams 10/29/2013</description>
        <formula>Account_MERC__r.Veeva_Organization_MERC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Institution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Justification_MERC__c</fullName>
        <description>Multi-Picklist created to identify reason to select the HCP for this service of work.
Created by John A Adams 10/7/2013</description>
        <inlineHelpText>An HCP must NOT be selected for any business relationship in order to influence or reward an HCP for past, present or future support of Lilly products, to gain access to a customer or formulary decision makers, to influence the outcome of clinical trial</inlineHelpText>
        <label>Justification</label>
        <picklist>
            <picklistValues>
                <fullName>Recognized as a Thought Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant topic research / background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding speaking ability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trained to speak on this topic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Therapeutic Area knowledge / experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recognized by local peers as a SME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published author in the Therapeutic Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proven effective Speaker / Moderator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please explain)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lilly_Affiliate_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to retrieve the Lilly Affiliate Business information pertaining to contract
Created by John A Adams 12/11/2013</description>
        <label>Lilly Affiliate</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>HCP Contracts (Lilly Affiliate)</relationshipLabel>
        <relationshipName>HCP_Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MSA_End_Date_MERC__c</fullName>
        <description>End Date for and Multi-Service Agreement Contract
Created by John A Adams 10/28/2013</description>
        <label>MSA End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MSA_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship to associate a Work Order to an MSA. Oliver Dunford 12th Nov.</description>
        <label>MSA</label>
        <referenceTo>HCP_Contract_MERC__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>HCP_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MSA_Start_Date_MERC__c</fullName>
        <description>Start Date for and Multi-Service Agreement Contract
Created by John A Adams 10/28/2013</description>
        <label>MSA Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mercury_External_Id_MERC__c</fullName>
        <description>Generated by Workflow used for Integration with External Systems.
Created by J Adams 12/10/2013</description>
        <externalId>true</externalId>
        <label>Mercury External Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Details_MERC__c</fullName>
        <description>Text are to note other details about potential speaker
Created by John A Adams 10/7/2013</description>
        <label>Other Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payee_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to payee
Created by John A Adams 10/7/2013</description>
        <label>Payee</label>
        <referenceTo>Payee_MERC__c</referenceTo>
        <relationshipLabel>HCP Contracts</relationshipLabel>
        <relationshipName>ContractXs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Required_MERC__c</fullName>
        <description>Records if payment for service is required
Created by John A Adams 10/7/2013</description>
        <label>Payment Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Signing_Parties_MERC__c</fullName>
        <description>Identifies parties that are needed to sign agreement.  This will be managed by Drawloop and DocuSign.
Created by John A Adams 10/17/2013</description>
        <inlineHelpText>Identify which parties must sign the agreement?</inlineHelpText>
        <label>Signing Parties</label>
        <picklist>
            <picklistValues>
                <fullName>HCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCP and Institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCP Legal Entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCP and HCP Legal Entity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Service_MERC__c</fullName>
        <description>Type of service being contracted for
Created by John A Adams 10/2/2013</description>
        <label>Type of Service</label>
        <picklist>
            <picklistValues>
                <fullName>Speaking - Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaking - Chairman Symposium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisory Board - Chairman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting ad hoc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>HCP Contract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_MERC__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Country_MERC__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Submitted_Contracts_MERC</fullName>
        <columns>NAME</columns>
        <columns>Account_MERC__c</columns>
        <columns>Contract_Request_Status_MERC__c</columns>
        <columns>Country_MERC__c</columns>
        <columns>Payee_MERC__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Request_Status_MERC__c</field>
            <operation>equals</operation>
            <value>Contract request submitted</value>
        </filters>
        <label>Submitted Contracts</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CNTR-{000000}</displayFormat>
        <label>HCP Contract #</label>
        <type>AutoNumber</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I11000000CjxpEAC_00N11000000Sl5sEAC</fullName>
        <active>true</active>
        <field>Meeting_Participant_MERC__c.HCP_Contract_MERC__c</field>
        <filterItems>
            <field>HCP_Contract_MERC__c.Account_MERC__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account_MERC__c</valueField>
        </filterItems>
        <infoMessage>Note: Select &quot;All Fields&quot; 

This searches all existing HCP Contracts for the HCP. The HCP Contract must already exist for the HCP.</infoMessage>
        <isOptional>false</isOptional>
        <name>Meeting Participant_HCP Contract</name>
        <sourceObject>Meeting_Participant_MERC__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I11000000Ck6cEAC_00N11000000T7RqEAK</fullName>
        <active>true</active>
        <field>HCP_Contract_MERC__c.MSA_MERC__c</field>
        <filterItems>
            <field>HCP_Contract_MERC__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Master Service Agreement</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>HCP Contract_MSA</name>
    </namedFilters>
    <pluralLabel>HCP Contracts</pluralLabel>
    <recordTypes>
        <fullName>Master_Service_Agreement_MERC</fullName>
        <active>true</active>
        <description>A master agreement permits the parties to quickly negotiate future transactions or agreements.</description>
        <label>Master Service Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Single_Event_Contract_MERC</fullName>
        <active>true</active>
        <description>A contract for a single meeting event.  Once meeting is over contract expires.</description>
        <label>Single Event Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Work_Order_MERC</fullName>
        <active>true</active>
        <description>Used to produce a Work Order, relating to an existing Master Services Agreement.</description>
        <label>Work Order</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>